--- a/author.html
+++ b/author.html
@@ -95,10 +95,39 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <br/>
       <p data-translate><b>Projects:</b></p>
 
-      <p data-translate>[Project Name]</p>
-      <p data-translate>Description: [Briefly describe the project and your role in it]</p>
-      <p data-translate>Technologies used: [List the programming languages and tools used]</p>
-      <br/>
+      <p data-translate>Website: <i><a class="link" href="restable">mr.kak.si/restable</a></i></p>
+      <p>
+        <span data-translate>Description: Under the guidance of Strategic Thinking and Business Creation</span><br/>
+        <span data-translate>teacher Alexander Valeryevich Vasenov, I created the website mr.kak.si/restable.</span><br/>
+        <span data-translate>This website allows users to create a resource table called "I want/I can". It is</span><br/>
+        <span data-translate>designed for students of Novocollege or Novosibirsk State University (where</span><br/>
+        <span data-translate>Alexander Valeryevich also teaches) to create a "I can" table with their abilities</span><br/>
+        <span data-translate>and find an employer or project that matches their "I want" table. Users can add</span><br/>
+        <span data-translate>any table to the website, and there are plans to include a similar feature for</span><br/>
+        <span data-translate>non-professional skills (soft skills).</span>
+      </p>
+      <p>
+        <span data-translate>Technologies used: HTML, CSS, JavaScript and many JavaScript packages,</span><br/>
+        <span data-translate>like: <i><a class="link" href="https://firebase.google.com">google firebase</a></i>, <i><a class="link" href="https://fingerprint.com">fingerprints</a></i> and more.</span>
+      </p><br/>
+      <p data-translate>Website: <i><a class="link" href="novocoin">mr.kak.si/novocoin</a></i></p>
+      <p>
+        <span data-translate>Description: At the request of Tatyana Yevgenyevna Rostyazhenko, the initial</span></br>
+        <span data-translate>telegram bot was created, but for convenience, it has been transformed into the</span></br>
+        <span data-translate>website mr.kak.si/novocoin. This website allows the college to conveniently</span></br>
+        <span data-translate>implement the exchange of Novocoins to calculate the final rating of students.</span></br>
+        <span data-translate>The system was launched in May 2023 in a testing format. Additionally, during</span></br>
+        <span data-translate>the creation of this website, the idea of creating a pixel battle for Novocollege</span></br>
+        <span data-translate>emerged, known as <i><a class="link" href="pixel">mr.kak.si/pixel</a></i>. It represents a large field of small cells where</span></br>
+        <span data-translate>a student or group of students can purchase a field using Novocoins. This not</span></br>
+        <span data-translate>only brings them a monthly income in Novocoins but also serves as a large</span></br>
+        <span data-translate>advertising billboard where they can draw their project's logo, link, or name,</span></br>
+        <span data-translate>visible to all visitors of the website.</span></br>
+      </p>
+      <p>
+        <span data-translate>Technologies used: HTML, CSS, JavaScript and many JavaScript packages,</span><br/>
+        <span data-translate>like: <i><a class="link" href="https://firebase.google.com">google firebase</a></i>, <i><a class="link" href="https://fingerprint.com">fingerprints</a></i> and more.</span>
+      </p><br/>
       <p data-translate>[Project Name]</p>
       <p data-translate>Description: [Briefly describe the project and your role in it]</p>
       <p data-translate>Technologies used: [List the programming languages and tools used]</p>
@@ -108,8 +137,8 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <p data-translate>English (Fluent)</p>
       <br/>
       <p data-translate><b>Contact Information:</b></p>
-      <p data-translate>Email: ma.group.box@gmail.com</p>
-      <p data-translate>Telegram: @mapagmataas</p>
+      <p>Email: ma.group.box@gmail.com</p>
+      <p>Telegram: @mapagmataas</p>
     </div>
   </div>
   <div id="background"></div>
