--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <img src="src/imgs/mr-icon.png" alt="icon">
     </div>
     <div class="text">
-      <p data-translate>Ma_dot is <i class="link">my (Mapagmataas')</i> website with my current projects</p>
+      <p data-translate>Ma_dot is <i><a class="link" href="author">my (author)</a></i> website with my current projects</p>
     </div>
   </div>
 
