--- a/author.html
+++ b/author.html
@@ -95,7 +95,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
       <br/>
       <p data-translate><b>Projects:</b></p>
 
-      <p data-translate>Website: <i><a class="link" href="restable">mr.kak.si/restable</a></i></p>
+      <p data-translate>Website: <i><a class="link" href="restable">mr.kak.si/restable</a> <a class="link" href="https://github.com/Mapagmataas1331/mr">(Github)</a></i></p>
       <p>
         <span data-translate>Description: Under the guidance of Strategic Thinking and Business Creation</span><br/>
         <span data-translate>teacher Alexander Valeryevich Vasenov, I created the website mr.kak.si/restable.</span><br/>
@@ -110,7 +110,7 @@ mr, mr., mrdot, mr dot, mr_dot, mrkak, mr kak, mrkaksi, mr kak si, mr.kak.si">
         <span data-translate>Technologies used: HTML, CSS, JavaScript and many JavaScript packages,</span><br/>
         <span data-translate>like: <i><a class="link" href="https://firebase.google.com">google firebase</a></i>, <i><a class="link" href="https://fingerprint.com">fingerprints</a></i> and more.</span>
       </p><br/>
-      <p data-translate>Website: <i><a class="link" href="novocoin">mr.kak.si/novocoin</a></i></p>
+      <p data-translate>Website: <i><a class="link" href="novocoin">mr.kak.si/novocoin</a> <a class="link" href="https://github.com/Mapagmataas1331/mr">(Github)</a></i></p>
       <p>
         <span data-translate>Description: At the request of Tatyana Yevgenyevna Rostyazhenko, the initial</span></br>
         <span data-translate>telegram bot was created, but for convenience, it has been transformed into the</span></br>
