--- a/404.html
+++ b/404.html
@@ -104,11 +104,11 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.qXnF9X9j.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BZ_hpqze.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BZrN_jpj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dty58T4I.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DXiXsSIM.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DFdXEfpm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.zaOrcn-4.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BL-f6Y03.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D8FimBZe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bgdl3gP-.js">
 	</head>
@@ -117,15 +117,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_4n77y4 = {
+					__sveltekit_cod2ep = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.qXnF9X9j.js"),
-						import("/_app/immutable/entry/app.zaOrcn-4.js")
+						import("/_app/immutable/entry/start.BZrN_jpj.js"),
+						import("/_app/immutable/entry/app.BL-f6Y03.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
