--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -104,28 +104,28 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BZrN_jpj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dty58T4I.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DXiXsSIM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.DFdXEfpm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BL-f6Y03.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D8FimBZe.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bgdl3gP-.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Dx0TR09_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.xRiW7VlT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.IQQ-QZxZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CycEEGHi.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BBEVg3wJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.ydsyYdE5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.GlImxJ_2.js">
 	</head>
 
 	<body>
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_cod2ep = {
+					__sveltekit_9namm5 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BZrN_jpj.js"),
-						import("/_app/immutable/entry/app.BL-f6Y03.js")
+						import("/_app/immutable/entry/start.Dx0TR09_.js"),
+						import("/_app/immutable/entry/app.BBEVg3wJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
