--- a/404.html
+++ b/404.html
@@ -104,28 +104,28 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Dx0TR09_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.xRiW7VlT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.IQQ-QZxZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CycEEGHi.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BBEVg3wJ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.ydsyYdE5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.GlImxJ_2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BcT9vX24.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C_gnB4e2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dokr0Jt2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.DId5r52q.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.ZNscQYN0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CYM3sL8r.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.K1oXkNTn.js">
 	</head>
 
 	<body>
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_9namm5 = {
+					__sveltekit_kxoq72 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Dx0TR09_.js"),
-						import("/_app/immutable/entry/app.BBEVg3wJ.js")
+						import("/_app/immutable/entry/start.BcT9vX24.js"),
+						import("/_app/immutable/entry/app.ZNscQYN0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
