Open Graph imaage update

--- a/src/app.html
+++ b/src/app.html
@@ -42,7 +42,7 @@
 	<meta property="og:title" content="macyou" />
 	<meta property="og:description" content="Mapagmataas' website" />
 	<meta property="og:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=Mapagmataas%27+website&author=macyou&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F154022631&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:domain" content="ma.cyou" />
@@ -51,7 +51,7 @@
 	<meta name="twitter:description" content="Mapagmataas' website" />
 	<meta name="twitter:alt" content="Twitter Image" />
 	<meta name="twitter:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=Mapagmataas%27+website&author=macyou&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F154022631&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<script async>
 		(function () {
