--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
 	<meta property="og:title" content="macyou" />
 	<meta property="og:description" content="Mapagmataas' website" />
 	<meta property="og:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=Mapagmataas%27+website&author=macyou&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F154022631&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:domain" content="ma.cyou" />
@@ -51,7 +51,7 @@
 	<meta name="twitter:description" content="Mapagmataas' website" />
 	<meta name="twitter:alt" content="Twitter Image" />
 	<meta name="twitter:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=Mapagmataas%27+website&author=macyou&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F154022631&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<script async>
 		(function () {
@@ -74,11 +74,11 @@
 		})();
 	</script>
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CSDu6-eg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BO9YfLR9.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BUbQtzTX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BnPTAWLX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dokr0Jt2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DId5r52q.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dwsncvkt.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BXOByKsj.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CYM3sL8r.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.K1oXkNTn.js">
 </head>
@@ -87,15 +87,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1a9fi1q = {
+					__sveltekit_ftkunz = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CSDu6-eg.js"),
-						import("/_app/immutable/entry/app.Dwsncvkt.js")
+						import("/_app/immutable/entry/start.BUbQtzTX.js"),
+						import("/_app/immutable/entry/app.BXOByKsj.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
