--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	<link rel="icon" type="image/png" href="/favicon.png" media="(prefers-color-scheme: light)" />
@@ -73,29 +73,29 @@
 			document.documentElement.setAttribute('lang', savedLanguage || browserLanguage);
 		})();
 	</script>
+
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BUbQtzTX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BnPTAWLX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dokr0Jt2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.DId5r52q.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BXOByKsj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CYM3sL8r.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.K1oXkNTn.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D1PKDlSO.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CtC9nIjX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Cac9V36f.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
-<body>
+<body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_ftkunz = {
+					__sveltekit_1m0pmz4 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BUbQtzTX.js"),
-						import("/_app/immutable/entry/app.BXOByKsj.js")
+						import("/_app/immutable/entry/start.D1PKDlSO.js"),
+						import("/_app/immutable/entry/app.Cac9V36f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
