--- a/404.html
+++ b/404.html
@@ -75,11 +75,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D1PKDlSO.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CtC9nIjX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CS-vDQ-p.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BdIltuOm.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cac9V36f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CznkdNWp.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
@@ -87,15 +87,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1m0pmz4 = {
+					__sveltekit_mdx9hb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D1PKDlSO.js"),
-						import("/_app/immutable/entry/app.Cac9V36f.js")
+						import("/_app/immutable/entry/start.CS-vDQ-p.js"),
+						import("/_app/immutable/entry/app.CznkdNWp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
