--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
 	</script>
 
 	
-		<link href="./_app/immutable/assets/0.BiN0Met4.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.B93IKjvn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DuPKnhfc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D1PKDlSO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CtC9nIjX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CS-vDQ-p.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BdIltuOm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cac9V36f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CznkdNWp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BYGxVUXP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BGAr6ZH2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/language.CQxcTSpo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/theme.Cvl0IPvA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Lex2o08o.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CWOOvNRx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.Dqyf9CTt.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BPvGn1oY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/language.DwAOxtrO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/theme.DD0eLBrI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Br4Q6Rbl.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.4cnaQ52Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CN6ZZec2.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -103,7 +103,7 @@
 			
 			<script>
 				{
-					__sveltekit_1m0pmz4 = {
+					__sveltekit_mdx9hb = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -112,8 +112,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D1PKDlSO.js"),
-						import("./_app/immutable/entry/app.Cac9V36f.js")
+						import("./_app/immutable/entry/start.CS-vDQ-p.js"),
+						import("./_app/immutable/entry/app.CznkdNWp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
