--- a/src/app.html
+++ b/src/app.html
@@ -4,34 +4,30 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<link rel="icon" type="image/png" href="/favicon.png" media="(prefers-color-scheme: light)" />
-	<link rel="icon" type="image/png" href="/favicon-light.png" media="(prefers-color-scheme: dark)" />
-	<link rel="shortcut icon" href="/favicon.ico" media="(prefers-color-scheme: light)" />
-	<link rel="shortcut icon" href="/favicon-light.ico" media="(prefers-color-scheme: dark)" />
+	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" media="(prefers-color-scheme: light)" />
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32-light.png"
-		media="(prefers-color-scheme: dark)" />
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" media="(prefers-color-scheme: light)" />
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16-light.png"
-		media="(prefers-color-scheme: dark)" />
-	<link rel="manifest" href="/site.webmanifest" media="(prefers-color-scheme: light)" />
-	<link rel="manifest" href="/site-light.webmanifest" media="(prefers-color-scheme: dark)" />
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2d89ef" />
 	<meta name="apple-mobile-web-app-title" content="macyou" />
-	<meta name="application-name" content="macyou" />
-	<meta name="msapplication-TileColor" content="#2d89ef" />
-	<meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
+	<link rel="manifest" href="/site.webmanifest" />
 
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<meta name="theme-color" content="#FAFAFA" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#0B0B09" media="(prefers-color-scheme: dark)" />
+
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="format-detection" content="telephone=no">
+
+	<meta http-equiv="X-Content-Type-Options" content="nosniff">
+	<meta name="referrer" content="strict-origin-when-cross-origin">
+	<meta http-equiv="Permissions-Policy" content="">
 
 	<title>macyou</title>
 	<meta name="description" content="Mapagmataas' website" />
-	<meta name="keywords" content="ma, cyou, macyou, mapagmataas, ma-cyou, ma.cyou" />
+	<meta name="keywords"
+		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent" />
 	<meta name="author" content="Mapagmataas" />
 	<meta name="robots" content="index, follow" />
 
