--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="macyou" />
@@ -71,11 +71,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CsH-DOrh.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CRho2o9I.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.B_BIpWuD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DIDCRuj2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C1Om4ree.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Gk6kQ36R.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
@@ -83,15 +83,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1ptv0eu = {
+					__sveltekit_196dw8l = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CsH-DOrh.js"),
-						import("/_app/immutable/entry/app.C1Om4ree.js")
+						import("/_app/immutable/entry/start.B_BIpWuD.js"),
+						import("/_app/immutable/entry/app.Gk6kQ36R.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
