--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="macyou" />
@@ -73,16 +73,16 @@
 	
 		<link href="./_app/immutable/assets/0.B93IKjvn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DuPKnhfc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CsH-DOrh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CRho2o9I.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B_BIpWuD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DIDCRuj2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C1Om4ree.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Gk6kQ36R.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BYGxVUXP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BTQ1fmlr.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DIE5zAQ0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.DwAOxtrO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.DD0eLBrI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D0Y6gwvF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BqAgZ92r.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4cnaQ52Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CN6ZZec2.js">
 </head>
@@ -99,7 +99,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ptv0eu = {
+					__sveltekit_196dw8l = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +108,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CsH-DOrh.js"),
-						import("./_app/immutable/entry/app.C1Om4ree.js")
+						import("./_app/immutable/entry/start.B_BIpWuD.js"),
+						import("./_app/immutable/entry/app.Gk6kQ36R.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
