--- a/404.html
+++ b/404.html
@@ -71,11 +71,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B_BIpWuD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DIDCRuj2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Ba7JhrSM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DRoMBhA-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Gk6kQ36R.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BFmYVk0r.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
@@ -83,15 +83,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_196dw8l = {
+					__sveltekit_1sw7elx = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B_BIpWuD.js"),
-						import("/_app/immutable/entry/app.Gk6kQ36R.js")
+						import("/_app/immutable/entry/start.Ba7JhrSM.js"),
+						import("/_app/immutable/entry/app.BFmYVk0r.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
