--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 	
 		<link href="./_app/immutable/assets/0.B93IKjvn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DuPKnhfc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B_BIpWuD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DIDCRuj2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Ba7JhrSM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DRoMBhA-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Gk6kQ36R.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BFmYVk0r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BYGxVUXP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DIE5zAQ0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.IkkLVPeD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.DwAOxtrO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.DD0eLBrI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BqAgZ92r.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.GI0l22DP.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4cnaQ52Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CN6ZZec2.js">
 </head>
@@ -99,7 +99,7 @@
 			
 			<script>
 				{
-					__sveltekit_196dw8l = {
+					__sveltekit_1sw7elx = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +108,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B_BIpWuD.js"),
-						import("./_app/immutable/entry/app.Gk6kQ36R.js")
+						import("./_app/immutable/entry/start.Ba7JhrSM.js"),
+						import("./_app/immutable/entry/app.BFmYVk0r.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
