--- a/404.html
+++ b/404.html
@@ -20,10 +20,6 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="format-detection" content="telephone=no">
 
-	<meta http-equiv="X-Content-Type-Options" content="nosniff">
-	<meta name="referrer" content="strict-origin-when-cross-origin">
-	<meta http-equiv="Permissions-Policy" content="">
-
 	<title>macyou</title>
 	<meta name="description" content="Mapagmataas' website" />
 	<meta name="keywords"
@@ -71,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Ba7JhrSM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DRoMBhA-.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BOFFfi6B.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DxRCJPBJ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BFmYVk0r.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Drvo_UPp.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
@@ -83,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1sw7elx = {
+					__sveltekit_sbvryz = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Ba7JhrSM.js"),
-						import("/_app/immutable/entry/app.BFmYVk0r.js")
+						import("/_app/immutable/entry/start.BOFFfi6B.js"),
+						import("/_app/immutable/entry/app.Drvo_UPp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
