--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="format-detection" content="telephone=no">
 
-	<meta http-equiv="X-Content-Type-Options" content="nosniff">
-	<meta name="referrer" content="strict-origin-when-cross-origin">
-	<meta http-equiv="Permissions-Policy" content="">
-
 	<title>macyou</title>
 	<meta name="description" content="Mapagmataas' website" />
 	<meta name="keywords"
@@ -73,16 +69,16 @@
 	
 		<link href="./_app/immutable/assets/0.B93IKjvn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DuPKnhfc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ba7JhrSM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DRoMBhA-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BOFFfi6B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DxRCJPBJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BFmYVk0r.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Drvo_UPp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BYGxVUXP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.IkkLVPeD.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BVxqKHcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.DwAOxtrO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.DD0eLBrI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.GI0l22DP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CBT0WYYW.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4cnaQ52Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CN6ZZec2.js">
 </head>
@@ -99,7 +95,7 @@
 			
 			<script>
 				{
-					__sveltekit_1sw7elx = {
+					__sveltekit_sbvryz = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +104,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ba7JhrSM.js"),
-						import("./_app/immutable/entry/app.BFmYVk0r.js")
+						import("./_app/immutable/entry/start.BOFFfi6B.js"),
+						import("./_app/immutable/entry/app.Drvo_UPp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
