--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="macyou" />
@@ -69,16 +69,16 @@
 	
 		<link href="./_app/immutable/assets/0.B93IKjvn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DuPKnhfc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BOFFfi6B.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DxRCJPBJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D7qztyq7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BxHIXp4r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Drvo_UPp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BPSttFHW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BYGxVUXP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BVxqKHcx.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B0JSK_zy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.DwAOxtrO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.DD0eLBrI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CBT0WYYW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BiH4j1UQ.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4cnaQ52Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CN6ZZec2.js">
 </head>
@@ -95,7 +95,7 @@
 			
 			<script>
 				{
-					__sveltekit_sbvryz = {
+					__sveltekit_1eff5bo = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +104,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BOFFfi6B.js"),
-						import("./_app/immutable/entry/app.Drvo_UPp.js")
+						import("./_app/immutable/entry/start.D7qztyq7.js"),
+						import("./_app/immutable/entry/app.BPSttFHW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
