--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="macyou" />
@@ -67,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BOFFfi6B.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DxRCJPBJ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D7qztyq7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BxHIXp4r.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Drvo_UPp.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BPSttFHW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
@@ -79,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_sbvryz = {
+					__sveltekit_1eff5bo = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BOFFfi6B.js"),
-						import("/_app/immutable/entry/app.Drvo_UPp.js")
+						import("/_app/immutable/entry/start.D7qztyq7.js"),
+						import("/_app/immutable/entry/app.BPSttFHW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
