--- a/src/app.html
+++ b/src/app.html
@@ -13,8 +13,8 @@
 	<meta name="apple-mobile-web-app-title" content="macyou" />
 	<link rel="manifest" href="/site.webmanifest" />
 
-	<meta name="theme-color" content="#FAFAFA" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#0B0B09" media="(prefers-color-scheme: dark)" />
+	<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#090A0B" media="(prefers-color-scheme: dark)" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
