--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 	<meta name="apple-mobile-web-app-title" content="macyou" />
 	<link rel="manifest" href="/site.webmanifest" />
 
-	<meta name="theme-color" content="#FAFAFA" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#0B0B09" media="(prefers-color-scheme: dark)" />
+	<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#090A0B" media="(prefers-color-scheme: dark)" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -67,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D7qztyq7.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BxHIXp4r.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DMWVYj1w.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CJZlBD7z.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BPSttFHW.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CMNgzPQv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
@@ -79,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1eff5bo = {
+					__sveltekit_muy60i = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D7qztyq7.js"),
-						import("/_app/immutable/entry/app.BPSttFHW.js")
+						import("/_app/immutable/entry/start.DMWVYj1w.js"),
+						import("/_app/immutable/entry/app.CMNgzPQv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
