--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<meta name="apple-mobile-web-app-title" content="macyou" />
 	<link rel="manifest" href="/site.webmanifest" />
 
-	<meta name="theme-color" content="#FAFAFA" media="(prefers-color-scheme: light)" />
-	<meta name="theme-color" content="#0B0B09" media="(prefers-color-scheme: dark)" />
+	<meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#090A0B" media="(prefers-color-scheme: dark)" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -68,18 +68,18 @@
 
 	
 		<link href="./_app/immutable/assets/0.B93IKjvn.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.DuPKnhfc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D7qztyq7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BxHIXp4r.js">
+		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DMWVYj1w.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CJZlBD7z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BPSttFHW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CMNgzPQv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BYGxVUXP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B0JSK_zy.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CQJwdOsf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.DwAOxtrO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.DD0eLBrI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BiH4j1UQ.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.4cnaQ52Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CVBtbZGW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DUYSDYGt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CN6ZZec2.js">
 </head>
 
@@ -95,7 +95,7 @@
 			
 			<script>
 				{
-					__sveltekit_1eff5bo = {
+					__sveltekit_muy60i = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +104,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D7qztyq7.js"),
-						import("./_app/immutable/entry/app.BPSttFHW.js")
+						import("./_app/immutable/entry/start.DMWVYj1w.js"),
+						import("./_app/immutable/entry/app.CMNgzPQv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
