--- a/404.html
+++ b/404.html
@@ -67,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DMWVYj1w.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CJZlBD7z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.6slrqoQ0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BjzEaOMq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CMNgzPQv.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.RnfRWsWC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
@@ -79,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_muy60i = {
+					__sveltekit_q6fyac = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DMWVYj1w.js"),
-						import("/_app/immutable/entry/app.CMNgzPQv.js")
+						import("/_app/immutable/entry/start.6slrqoQ0.js"),
+						import("/_app/immutable/entry/app.RnfRWsWC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
