--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
 	
 		<link href="./_app/immutable/assets/0.B93IKjvn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DMWVYj1w.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CJZlBD7z.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6slrqoQ0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BjzEaOMq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CZu1HtMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3mgNsgT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CMNgzPQv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.RnfRWsWC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BYGxVUXP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CQJwdOsf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/language.DwAOxtrO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/theme.DD0eLBrI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CVBtbZGW.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DUYSDYGt.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CN6ZZec2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.UZxF62d8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/language.BKRKAYeJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/theme.CCXGVOkb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CcOK0lj2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.gaK6hA-k.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CMxY63cm.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -95,7 +95,7 @@
 			
 			<script>
 				{
-					__sveltekit_muy60i = {
+					__sveltekit_q6fyac = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +104,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DMWVYj1w.js"),
-						import("./_app/immutable/entry/app.CMNgzPQv.js")
+						import("./_app/immutable/entry/start.6slrqoQ0.js"),
+						import("./_app/immutable/entry/app.RnfRWsWC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
