--- a/404.html
+++ b/404.html
@@ -67,27 +67,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.gJMCVbnD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BrD-aZWs.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BedhUbme.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.C-WwkpB6.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B2oLkE0T.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.COpIlTjV.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BiiR4QQd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.49EyUgQ_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CZu1HtMl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.B3mgNsgT.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BBrGAll7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BYGxVUXP.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_a2nj80 = {
+					__sveltekit_1vod0qb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.gJMCVbnD.js"),
-						import("/_app/immutable/entry/app.B2oLkE0T.js")
+						import("/_app/immutable/entry/start.BiiR4QQd.js"),
+						import("/_app/immutable/entry/app.BBrGAll7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
