--- a/404.html
+++ b/404.html
@@ -67,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BFfgIlKn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B6Znjqr5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C6IRH8VR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.EyWU_EPe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BedhUbme.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.C-WwkpB6.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CSasO-SZ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DpI8vlyk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.COpIlTjV.js">
 </head>
 
@@ -79,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1f7kpir = {
+					__sveltekit_2zt3wb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BFfgIlKn.js"),
-						import("/_app/immutable/entry/app.CSasO-SZ.js")
+						import("/_app/immutable/entry/start.C6IRH8VR.js"),
+						import("/_app/immutable/entry/app.DpI8vlyk.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
