--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 	
 		<link href="./_app/immutable/assets/0.CtmaMITR.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BFfgIlKn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B6Znjqr5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C6IRH8VR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.EyWU_EPe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.BedhUbme.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C-WwkpB6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CSasO-SZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DpI8vlyk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.COpIlTjV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.D1hNa8RV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.41vM7Qz1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.BgpHGp4E.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/theme.Dck9WFe3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DlmFiCJj.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CYnUxxz_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/theme.Bs4tdBlV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Dwo4m3lW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D1PE8kXr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.AzdP5zTU.js">
 </head>
 
@@ -95,7 +95,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f7kpir = {
+					__sveltekit_2zt3wb = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +104,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BFfgIlKn.js"),
-						import("./_app/immutable/entry/app.CSasO-SZ.js")
+						import("./_app/immutable/entry/start.C6IRH8VR.js"),
+						import("./_app/immutable/entry/app.DpI8vlyk.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
